--- a/About.css
+++ b/About.css
@@ -1,27 +1,29 @@
 .aboutus_book{
     display: flex;
     justify-content: center;
-
+    align-items: center;
 }
 
 .book_first_page{
     color: rgb(0, 0, 0);
     position: relative;
     flex-direction: column;
-    width: 40vw;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
     background-color: rgb(88, 47, 14);
     background-image: url(pics/bp.png);
     background-size: cover;
     border-radius: 20px;
 }
-.book_first_page *{
+.book_first_page ul,h2{
     display: flex;
-    position: relative;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
 .aboutus_text{
+    display: flex;
     justify-content: center;
     color: white;
-    display: flex;
 }
