--- a/css/About.css
+++ b/css/About.css
@@ -1,3 +1,4 @@
+
 .aboutus_book{
     display: flex;
     justify-content: center;
@@ -5,6 +6,7 @@
 }
 
 .book_first_page{
+   
     color: rgb(0, 0, 0);
     position: relative;
     flex-direction: column;
@@ -21,8 +23,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+}   
 .aboutus_text{
+    margin-top: 10%;
     display: flex;
     justify-content: center;
     color: white;
