--- a/css/borrow_book.css
+++ b/css/borrow_book.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   border-radius: 10px;
   padding: 30px;
-  background-color: #DDD;
+  background-color: #B6AD90;
 }
 
 .container header {
