--- a/css/nav_bar.css
+++ b/css/nav_bar.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   background-color: rgb(69, 39, 17);
-  justify-content: space-evenly;
+  justify-content: space-between;
   border: 1px solid black;
 }
 
@@ -13,13 +13,13 @@
 .nav_bar_button {
   text-align: center;
   padding: 0px;
+  margin: 0px;
   --color: rgb(182, 173, 144);
   font-size: larger;
   display: inline-block;
   width: 8em;
   height: 2.6em;
   line-height: 2.5em;
-  margin: 0px;
   position: relative;
   overflow: hidden;
   border: 1px solid black;
@@ -75,10 +75,10 @@
 
 .left_buttons{
     display: flex;
-    margin-right: auto; /* Push to the far left */
+    margin-right: auto;
 }
 
 .right_buttons{
     display: flex;
-    margin-left: auto; /* Push to the far right */
+    margin-left: auto;
 }
