--- a/css/borrow_book.css
+++ b/css/borrow_book.css
@@ -2,15 +2,13 @@ body {
   background-color: #f6f1de;
 }
 .container {
-  position: absolute;
-  margin: 0%;
-  top: 50%;
+  padding: 20px;
+  margin: 100px auto;
+  box-sizing: border-box;
   left: 50%;
-  transform: translate(-50%, -50%);
   max-width: 900px;
   width: 100%;
   border-radius: 10px;
-  padding: 30px;
   background-color: #B6AD90;
 }
 
