--- a/css/add_book.css
+++ b/css/add_book.css
@@ -1,26 +1,28 @@
-form .add_book_class{
+.add_book_class{
     margin: 20px;
     padding: 20px;
-    background-color: #fff; /* White background */
+    background-color: #B6AD90; /* White background */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Drop shadow */
 }
 
 .title {
-    color: #264143;
-    font-weight: 900;
-    font-size: 1.5em;
-    margin-top: 20px;
+    color:#532c0c;
+    margin: 35px 0px;
+    padding: 10px 0;
+    font-family: "Shadow Into Light", cursive;
+    font-size: 32px;
+
 }
 
 .subtitle{
-    font-weight: bold;
-    color: #795548; /* Brown color */
+    color: #582F0E;
+    font-size: 18px;
 }
 
 input[type="submit"] {
-    background-color: #795548; /* Brown color */
-    color: #fff; /* White text */
+    background-color: #7F4F24; /* Brown color */
+    color: #f2f4eb; /* White text */
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -35,10 +37,46 @@ input[type="submit"] {
 }
 
 .form_style {
-    outline: none;
-    border: 2px solid #264143;
     width: 290px;
-    padding: 12px 10px;
+    padding: 15px 20px;
+    margin: 8px;
+    display: inline-block;
+    color: black;
+    border: 1px solid #bebebe;
+    background-color: #f2f4eb;
     border-radius: 4px;
-    font-size: 15px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+.form_style:focus {
+    background-color: white;
+    border: 3px solid #b9bea6;
+    outline: 3px solid #582F0E;
+}
+
+
+
+body {
+    background-color: #f6f1de;
+}
+
+textarea {
+    width: 800px;
+    height: 300px;
+    padding: 15px 20px;
+    margin: 8px;
+    display: inline-block;
+    color: black;
+    border: 1px solid #bebebe;
+    background-color: #f2f4eb;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+    resize: none;
+}
+
+textarea:focus {
+    background-color: white;
+    border: 3px solid #b9bea6;
+    outline: 3px solid #582F0E;
 }
