--- a/css/About.css
+++ b/css/About.css
@@ -4,6 +4,10 @@
     justify-content: center;
     align-items: center;
 }
+* {
+    font-family: "Shadow Into Light", cursive;
+}
+
 
 .book_first_page{
    
