--- a/css/all_books.css
+++ b/css/all_books.css
@@ -3,15 +3,14 @@
     flex-wrap: wrap;
     margin: 20px;
     padding: 20px;
-    background-color: #B6AD90; /* White background */
+    background-color: #B6AD90; 
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Drop shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);    
 }
 .book_block {
     flex: 0 0 17%; 
-    margin: 10px;
     width: 200px;
-    height: 400px; 
+    height: 415px; 
     background-color: #f5f5f5; 
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -23,13 +22,14 @@
 }
 
 .book_block:hover {
-    width: 210px;
-    height: 400px;
+    transform: translateY(-20px);
+    width: 200px;
+    height: 415px;
     background-color: #e6ccb2; 
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
-    margin: 10px;
+    margin: 20px;
 }
 
 .book_link {
