--- a/css/BookPage.css
+++ b/css/BookPage.css
@@ -8,8 +8,10 @@ body{
 }
 
 .bookimg{
-    height: 80vh;
-    margin: 0vh 3vw 2vh 3vw;
+    background-size : cover;
+    height : 80vh;
+    width : 50vw;
+    margin : 0vh 3vw 2vh 3vw;
     border-radius: 15px;
 }
 * {
