--- a/EgyBooks/static/css/About.css
+++ b/EgyBooks/static/css/About.css
@@ -18,7 +18,7 @@
     justify-content: center;
     width: 20vw;
     background-color: rgb(88, 47, 14);
-    background-image: var(--background-image-url);
+    background-image: var(--bg-image-url);
     background-size: cover;
     border-radius: 20px;
 }
